--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TestApiApplication</string>
+    <string name="app_name">News Application</string>
+    <string name="news_app">NEWS APP</string>
 </resources>
